--- a/settings.json
+++ b/settings.json
@@ -1,7 +1,7 @@
 {
-	"prefix": ".",
-	"namabot": "𝐅𝐚𝐫𝐝𝐢 𝐁𝐎𝐓",
+	"prefix": "#",
+	"namabot": "Fardi Bot",
 	"ownerNumber": "6285340620318",
-	"fakeNya":"𝔽𝕒𝕣𝕕𝕚𝔹𝕆𝕋",
-	"namaowner": "𝐅𝐚𝐫𝐝𝐢"
+	"fakeNya":"FardiBot",
+	"namaowner": "Fardi"
 }
